emulator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emulator-ingress
  namespace: ilay
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appdistr.sergeyhook.ru
      secretName: appdistr-gateway-tls
  rules:
    - host: appdistr.sergeyhook.ru
      http:
        paths:
          - path: /emulator(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: android-emulator
                port:
                  number: 6080
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: android-emulator
                port:
                  number: 6080
