ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdistr-ingress
  namespace: ilay
  labels:
    app: appdistr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-types: "text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/vnd.android.package-archive"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appdistr.sergeyhook.ru
      secretName: appdistr-gateway-tls
  rules:
    - host: appdistr.sergeyhook.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ingress
  namespace: ilay
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appdistr.sergeyhook.ru
      secretName: appdistr-gateway-tls
  rules:
    - host: appdistr.sergeyhook.ru
      http:
        paths:
          - path: /human/sw
            pathType: Prefix
            backend:
              service:
                name: human-verification
                port:
                  number: 8080
          - path: /devapp/sw
            pathType: Prefix
            backend:
              service:
                name: developer-application
                port:
                  number: 8080
          - path: /devprofile/sw
            pathType: Prefix
            backend:
              service:
                name: developer-profile
                port:
                  number: 8080
          - path: /emulator
            pathType: Prefix
            backend:
              service:
                name: android-emulator
                port:
                  number: 6080
